@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+
+<iati-activities>
+  <iati-activity version="1.01">
+    <iati-identifier>12345</iati-identifier>
+    <description>xxx</description>
+  </iati-activity>
+</iati-activities>
