@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+
+<iati-organisation version="999">
+  <iati-identifier>12345</iati-identifier>
+</iati-organisation>
